# yew-deno-template

./: .gitignore  Cargo.toml  README.md  index.html  scripts.yaml
.history/server/: index_20220725154006.ts  index_20220725154008.ts  index_20220725154010.ts
server/: index.ts
src/: main.rs
src/components/: navbar.rs
src/pages/: about.rs  mod.rs  not_found.rs
